# VsCode

./: CMakeLists.txt
OOP/: Lab1.c  Lab5.txt
OOP/Lab3/: CMakeLists.txt  admin.cpp  admin.h  assessment.cpp  assessment.h  course.cpp  course.h  course_inst.cpp  course_inst.h  info_interface.h  main.cpp  minibb.cpp  minibb.h  person.cpp  person.h  program.cpp  program.h  program1.cpp  program_inst.cpp  program_inst.h  student.cpp  student.h  teacher.cpp  teacher.h  what_courses_interface.h
OOP/OOP/: Lab1.c
